MOD: change director

--- a/source/_posts/project/svn/2011-09-22-svn-roll.md
+++ b/source/_posts/project/svn/2011-09-22-svn-roll.md
@@ -6,7 +6,7 @@ wordpress_id: 505
 comments: true
 tags: ["project", "svn"]
 categories:
-- knowledge
+- [project,svn]
 ---
 <meta name="_edit_last" content="1" />
 <meta name="_su_description" content="svn roll back, recover. " />
@@ -19,5 +19,12 @@ like :
 <blockquote> svn merge -r newversion:oldversion</blockquote>
 But if you want check out old version to cover new version. do like this:
 <blockquote> svn co -r oldversion svnpath localpath</blockquote>
-svn 如果是svn server的代码需要回滚，则使用svn merge -r newversion:oldversion
-如果是svn客户端 check out出来的代码需要找到以前的版本，则使用svn co -r version svnpath localpath
+svn 如果是svn server的代码需要回滚，则使用
+
+```shell
+svn merge -r newversion:oldversion
+```
+如果是svn客户端 check out出来的代码需要找到以前的版本，则使用
+```shell
+svn co -r version svnpath localpath
+```
