--- a/source/_posts/project/svn/2012-03-21-svn-diff.md
+++ b/source/_posts/project/svn/2012-03-21-svn-diff.md
@@ -5,10 +5,11 @@ date: 2012-03-21 21:21
 comments: true
 tags: svn,diff,merge,lost,patch  
 categories:
-- knowledge
+- [project,svn]
 ---
 最近碰到了`svn merge`之后，再使用`svn diff`产生出来的patch中缺少某些文件的信息。后来发现了原因。使用`svn st`查看那些文件信息，类似于:
-```
+
+```shell
 A       src/aa.c
 A   +   src/bb.c
 M       src/cc.c
@@ -17,6 +18,7 @@ M       src/cc.c
 这样输出的patch中，aa.c是信息是都有的。cc.c也是有的。但是bb.c的信息不存在。主要是存在那个`+`. `+`的意思是这些文件存在于提交历史中，所以该文件不能再次被diff.但是为什么会存在于提交历史中，这个我就不知道了。     
 下面是教你如何去掉`+`.
 使用下面的脚本会方便的去掉各个文件的`+`,对于目录的`+`是不能去掉的.
+
 ```bash
 #!/bin/sh
 plus_file=`svn st | grep "^A" | grep "+" | cut -d" " -f6`
