--- a/source/_posts/daily/2007-02-07-csdn-bugs.md
+++ b/source/_posts/daily/2007-02-07-csdn-bugs.md
@@ -4,6 +4,8 @@ title: 'csdn blog中的bug继续播报'
 date: 2007-02-07 16:36
 comments: true
 tags: ['blog']
+categories:
+- [daily]
 ---
 
 登陆csdn的blog后，点击管理文章，发现各个文章的访问量是过去的。下翻一页后，再翻回上一页就发现文章的访问量变为真正的访问量了。不知道是不是缓冲的问题。
