--- a/source/_posts/project/git/2012-01-31-git-alias.md
+++ b/source/_posts/project/git/2012-01-31-git-alias.md
@@ -5,16 +5,16 @@ date: 2012-01-31 19:57
 comments: true
 tags: git, alias, 别名
 categories:
-- knowledge
+- [project, git]
 ---
 今天唐大牛教了些git的命令。顺便把他的git别名也发给我了。啥叫别名，就是
-{% blockquote %}
-git br
-==>
-git branch
-{% endblockquote %}
-只需要在home目录下的.gitconfig文件中添加：
+```shell
+git br  ==>  git branch
 ```
+
+只需要在home目录下的.gitconfig文件中添加：
+
+```bash
 [alias]
   st = status -s
   ci = commit
@@ -30,15 +30,13 @@ git branch
 
 <!-- more -->
 Today, big tang teaches me some git commands. And he gives me his alias of git commands to me. What's alias? That's
-```
-git br
-==>
-git branch
 
+```shell
+git br  ==>  git branch
 ```
 
 only write the following code in `~/.gitconfig` file.
-```
+```bash
 [alias]
   st = status -s
   ci = commit
