MOD: change path

--- a/source/_posts/daily/2010-01-11-look-back.md
+++ b/source/_posts/daily/2010-01-11-look-back.md
@@ -4,13 +4,11 @@ title: "Look back"
 date: 2010-1-11
 wordpress_id: 57
 comments: true
-tags: ["conclusion-summary", "rw"]
 categories:
-- prose
+- daily
 
 ---
-<meta name="views" content="1320" />
-<meta name="_edit_last" content="1" />
+
 someone passed away
 someone was born
 someone had gone
